--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "openzeppelin-solidity": "^2.2.0",
     "solc": "^0.5.2",
     "solc-js": "^0.5.2",
-    "truffle": "^5.0.20"
+    "truffle": "^5.0.20",
+    "truffle-hdwallet-provider": "^1.0.10"
   }
 }
